--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Joakim J. Rapp",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "2.1.36",
+    "aws-sdk": "2.1.36"
   },
   "devDependencies": {
     "mocha": "2.2.5",
